# WindowsEx

./: CMakeLists.txt  EscapeCommandLineArg.c  FileSystem.c  FileSystem.h  GetErrorLabel.c  README.md  WinApiError.cpp  WinApiError.hpp  WindowsEx.h
Tests/: CMakeLists.txt  EscapeCommandLineArgA.cpp  FileTest.cpp  FileTest.hpp  GTest.cpp  GTest.hpp  GetErrorLabelA.cpp  GetFileAllocationBlockSize.cpp  Main.cpp  QueryFileAllocatedRanges.cpp  ResizeFile.cpp  SetFileSparse.cpp  SetFileZeroData.cpp  TestDirectoryPath.c  TestDirectoryPath.h  WriteFile.cpp
example/: CMakeLists.txt  main.c
examples/: main.c
generate_GetErrorLabel_c/: README.md  main.py  requirements.txt  winapi_errors.py
tests/: CMakeLists.txt  EscapeCommandLineArgA.cpp  GetErrorLabelA.cpp  README.md  main.cpp
